system/cms/themes/pyrocms/css/workless.css
/* ... */
.block-message ul {
  margin-bottom: 0;
}

.block-message strong {
  display: block;
}

.block-message.error {
  background: #f8dcda;
  border: 1px solid #f4c8c5;
}

.block-message.warning {
  background: #fff0c0;
  border: 1px solid #ffe38d;
}

.block-message.success {
  background: #dff1df;
  border: 1px solid #bbe2bb;
}

.block-message.info {
  background: #c7eefe;
  border: 1px solid #ade6fe;
}

.block-message .close {
  float: right;
  margin-top: -4px;
  color: #333333;
  font-size: 20px;
  font-weight: bold;
  text-shadow: 0 1px 0 #ffffff;
  filter: alpha(opacity=20);
  -khtml-opacity: 0.2;
  -moz-opacity: 0.2;
  opacity: 0.2;
}

.block-message .close:hover {
  text-decoration: none;
  filter: alpha(opacity=40);
  -khtml-opacity: 0.4;
  -moz-opacity: 0.4;
  opacity: 0.4;
}

/* Tabs */
.tabs, .pills {
  margin: 0 0 20px;
  padding: 0;
  zoom: 1;
}

.tabs:before,
.pills:before,
.tabs:after,
.pills:after {
  display: table;
  content: "";
}

.tabs:after, .pills:after {
  clear: both;
}

.tabs {
  width: 100%;
  border-bottom: 1px solid #eeeeee;
}

.tab-menu ul li, .tab-menu ol li, .pill li {
  display: inline;
}

.tab-menu li a, .pill li a {
  float: left;
  width: auto;
}

.tab-menu li a {
  background: #efefef;
  margin-right: 2px;
  margin-bottom: -1px;
  padding: 0 15px;
  line-height: 35px;
  -webkit-border-radius: 3px 3px 0 0;
  -moz-border-radius: 3px 3px 0 0;
  border-radius: 3px 3px 0 0;
}

.tab-menu li a:hover {

  background: #e6e6e6;
  border-bottom: 1px solid #bfbfbf;
}

.tab-menu li.active a {
  background-color: #ffffff;
  padding: 0 14px;
  border: 1px solid #cccccc;
  border-bottom: 0;
  color: #808080;
}

/* Pills */
.pill a, .pill li a {
  background: #aaaaaa;
  color: #ffffff;
  text-decoration: none;
  padding: 5px 15px 5px 15px;
  line-height: 30px;
  -webkit-border-radius: 15px;
  -moz-border-radius: 15px;
  border-radius: 15px;
}

.pill a:hover, .pill li a:hover {
  background: #bbbbbb;
  color: #ffffff;
  text-decoration: none;
  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
}

.pill a.active, .pill li a:active {
  background: #0069d6;
  color: #ffffff;
  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
}

.pill li, li.pill {
	list-style: none;
}

/* Pagination */
.pagination {
  margin: 18px 0;
}

.pagination ul {
  float: left;
  margin: 0;
  padding: 0;
  border: 1px solid #ddd;
  border: 1px solid rgba(0, 0, 0, 0.15);
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  border-radius: 3px;
  -webkit-grid-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
  -moz-grid-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
  grid-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
}

.pagination ul li {
  display: inline;
}

.pagination ul li a {
  float: left;
  padding: 0 14px;
  line-height: 34px;
  border-right: 1px solid;
  border-right-color: #dddddd;
  text-decoration: none;
}

.pagination ul li a:hover, .pagination ul li.active a {
  background-color: #c7eefe;
}

.pagination ul li.disabled a, .pagination ul li.disabled a:hover {
  background-color: none;
  color: #bfbfbf;
}

.pagination ul li.next a {
  border: 0;
}

.topbar {
  height: 50px;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  z-index: 9998;
  overflow: visible;
  background-color: #222222;
  background-repeat: repeat-x;
  background-image: -khtml-gradient(linear, left top, left bottom, from(#333333), to(#222222));
  background-image: -moz-linear-gradient(top, #333333, #222222);
  background-image: -ms-linear-gradient(top, #333333, #222222);
  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #333333), color-stop(100%, #222222));
  background-image: -webkit-linear-gradient(top, #333333, #222222);
  background-image: -o-linear-gradient(top, #333333, #222222);
  background-image: linear-gradient(top, #333333, #222222);
  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
  -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
}

.topbar nav {
	float: left;
}

.topbar h3 {
  position: relative;
}

.topbar ul {
  display: block;
  float: left;
  margin: 0 10px 0 -15px;
  position: relative;
}

.topbar ul li {
  float: left;
  font-size: 13px;
  position: relative;
}

.topbar ul li a {
  display: block;
  float: none;
  padding: 15px 10px 15px 10px;
  line-height: 19px;
  text-decoration: none;
  color: #bfbfbf;
  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
}

.topbar ul li a:hover {
  background-color: #333333;
  background-color: rgba(255, 255, 255, 0.05);
  color: #ffffff;
  text-decoration: none;
}

.topbar ul li.active a {
  background-color: #333;
  background-color: rgba(255, 255, 255, 0.05);
  color: #ffffff;
  text-decoration: none;
}

.topbar ul li.menu {
  position: relative;
}

.topbar ul li a.menu:after {
  width: 0px;
  height: 0px;
  display: inline-block;
  content: "&darr;";
  text-indent: -99999px;
  vertical-align: top;
  margin-top: 8px;
  margin-left: 4px;
  border-left: 4px solid transparent;
  border-right: 4px solid transparent;
  border-top: 4px solid #fff;
  filter: alpha(opacity=50);
  -khtml-opacity: 0.5;
  -moz-opacity: 0.5;
  opacity: 0.5;
}

.topbar ul li ul {
  background-color: #333;
  float: left;
  display: none;
  position: absolute;
  top: 50px;
  min-width: 160px;
  max-width: 220px;
  _width: 160px;
  margin-left: 0;
  margin-right: 0;
  padding: 0;
  text-align: left;
  border: 0;
  zoom: 1;
  -webkit-border-radius: 0 0 5px 5px;
  -moz-border-radius: 0 0 5px 5px;
  border-radius: 0 0 5px 5px;
  -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
  -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
}

.topbar ul li ul li {
  float: none;
  clear: both;
  display: block;
  background: none;
  font-size: 12px;
  min-width: 160px;
  max-width: 220px;
  _width: 160px;
}
/* ... */

